# cologs

./: README.md  cologs.py  pyproject.toml  test_suite.py
.github/workflows/: ci.yml
